--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="roll">Roll</string>
+    <string name="textview">TextView</string>
+    <string name="islam_nugman">Islam Nugman</string>
+    <string name="todo">TODO</string>
 </resources>
